ydc_develop/force-app/main/default/objects/BI_Sheet_Field__c/BI_Sheet_Field__c.object-meta.xml
<CustomObject>
    <label>BI Sheet Field</label>
    <nameField>
        <displayFormat>SF-{00000}</displayFormat>
        <label>BI Sheet Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Sheet Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>