ydc_develop/force-app/main/default/objects/BI_Sheet_Field__c/fields/BI_Field__c.field-meta.xml
<CustomField>
    <fullName>BI_Field__c</fullName>
    <label>BI Field</label>
    <referenceTo>BiField__c</referenceTo>
    <relationshipLabel>Sheets</relationshipLabel>
    <relationshipName>BI_Sheet_Fields</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>