ydc_develop/force-app/main/default/objects/BI_Sheet_Field__c/fields/BI_Sheet__c.field-meta.xml
<CustomField>
    <fullName>BI_Sheet__c</fullName>
    <label>BI Sheet</label>
    <referenceTo>BI_Sheet__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>BI_Sheet_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>